applied patch 71c956f | Issue #1057912 by bfroehle, mgifford, bowersox, tarekdj, geerlingguy, hgurol: Fixed Weird Border on Vertical Tabs with Google Chrome and Safari caused by .element-invisible. drupal7-weirdborder-1057912-88.patch

--- a/modules/system/system.base.css
+++ b/modules/system/system.base.css
@@ -230,6 +230,8 @@ tr .ajax-progress-throbber .throbber {
 .element-invisible {
   position: absolute !important;
   clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  height: 1px;
 }
 
 /**
@@ -240,6 +242,8 @@ tr .ajax-progress-throbber .throbber {
 .element-invisible.element-focusable:focus {
   position: static !important;
   clip: auto;
+  overflow: visible;
+  height: auto;
 }
 
 /**
