--- a/modules/contextual/contextual.css
+++ b/modules/contextual/contextual.css
@@ -69,7 +69,7 @@ div.contextual-links-wrapper ul.contextual-links {
   -moz-border-radius: 4px 0 4px 4px; /* LTR */
   border-radius: 4px 0 4px 4px; /* LTR */
 }
-.contextual-links-region:hover a.contextual-links-trigger,
+a.contextual-links-trigger-active,
 div.contextual-links-active a.contextual-links-trigger,
 div.contextual-links-active ul.contextual-links {
   display: block;
