--- a/modules/system/system.theme-rtl.css
+++ b/modules/system/system.theme-rtl.css
@@ -41,12 +41,12 @@ th {
 /**
  * Collapsible fieldsets.
  */
-.js fieldset.collapsible > legend .fieldset-legend {
+.js fieldset.collapsible > legend .fieldset-legend a {
   background-position: 98% 75%;
   padding-left: 0;
   padding-right: 15px;
 }
-.js fieldset.collapsed > legend .fieldset-legend {
+.js fieldset.collapsed > legend .fieldset-legend a {
   background-image: url(../../misc/menu-collapsed-rtl.png);
   background-position: 98% 50%;
 }
