Issue #207: CSS review of cleanup from Drupal 8: Clean up css in Field

--- a/modules/field/theme/field.css
+++ b/modules/field/theme/field.css
@@ -15,11 +15,11 @@ form .field-multiple-table {
 form .field-multiple-table th.field-label {
   padding-left: 0; /*LTR*/
 }
-form .field-multiple-table td.field-multiple-drag {
+form .field-multiple-table .field-multiple-drag {
   width: 30px;
   padding-right: 0; /*LTR*/
 }
-form .field-multiple-table td.field-multiple-drag a.tabledrag-handle {
+form .field-multiple-table .field-multiple-drag .tabledrag-handle {
   padding-right: .5em; /*LTR*/
 }
 
