--- a/modules/field/theme/field-rtl.css
+++ b/modules/field/theme/field-rtl.css
@@ -2,12 +2,12 @@
 form .field-multiple-table th.field-label {
   padding-right: 0;
 }
-form .field-multiple-table td.field-multiple-drag {
-  padding-left: 0;
-}
-form .field-multiple-table td.field-multiple-drag a.tabledrag-handle{
-  padding-left: .5em;
-}
+form .field-multiple-table .field-multiple-drag {
+    padding-left: 0;
+  }
+form .field-multiple-table .field-multiple-drag .tabledrag-handle{
+    padding-left: .5em;
+  }
 .field-label-inline .field-label,
 .field-label-inline .field-items {
   float: right;
