--- a/themes/seven/jquery.ui.theme.css
+++ b/themes/seven/jquery.ui.theme.css
@@ -335,7 +335,7 @@
 }
 .ui-dialog .ui-dialog-titlebar {
   font-weight: bold;
-  background: #e1e2dc;
+  background: #f3f4ee;
 }
 .ui-dialog .ui-dialog-buttonpane {
   border-width: 0;
