--- a/modules/views/views_ui/css/views-admin.theme.css
+++ b/modules/views/views_ui/css/views-admin.theme.css
@@ -756,27 +756,6 @@ ul#views-display-menu-tabs li.add ul.action-list li{
   padding: 0;
 }
 
-.views-ui-dialog .ui-dialog-titlebar-close {
-  background: url("../images/close.png") no-repeat scroll 6px 3px #F3F4EE;
-  border-color: #aaaaaa;
-  -moz-border-radius: 0 10px 12px 0;
-  -webkit-border-radius: 0 10px 12px 0;
-  border-radius: 0 10px 12px 0;
-  border-style: solid;
-  border-width: 1px 1px 1px 0;
-  -moz-box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.1);
-  height: 22px;
-  right: -28px;
-  top: 0;
-  width: 26px;
-}
-
-.views-ui-dialog .ui-dialog-titlebar-close span {
-  display: none;
-}
-
 .views-filterable-options .form-type-checkbox {
   border: 1px solid #CCC;
   padding: 5px 8px;
@@ -835,6 +814,7 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 .views-ui-dialog #views-ajax-title,
 .views-ui-dialog .views-override {
   background-color: #F3F4EE;
+  border-bottom: 1px solid #CCCCCC;
 }
 
 .views-ui-dialog .views-override {
@@ -863,12 +843,6 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 
 .views-ui-dialog #views-progress-indicator:after {
   content: "\00A0\003E";
-}
-
-.views-ui-dialog .scroll {
-  border: 1px solid #CCC;
-  border-width: 1px 0;
-  padding: 8px 13px;
 }
 
 .views-ui-dialog fieldset .item-list {
@@ -1056,22 +1030,25 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 /* @group AJAX */
 
 /* Hide the drupal system throbber image */
-.ajax-progress .throbber {
+.views-admin .ajax-progress .throbber {
   display: none;
 }
 
-.ajax-progress-throbber {
+.views-admin .ajax-progress-throbber {
   background-color: #232323;
   background-image: url("../images/loading-small.gif");
   background-position: center center;
   background-repeat: no-repeat;
-  -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
   border-radius: 7px;
   height: 24px;
   opacity: .9;
   padding: 4px;
   width: 24px;
+  -webkit-box-sizing: 7px;
+  -moz-box-sizing: 7px;
+  box-sizing: inherit;
 }
 
 /* @end */
