Issue #189: Porting Admin Menu to Backdrop. Removing Toolbar.

--- a/themes/bartik/css/print.css
+++ b/themes/bartik/css/print.css
@@ -17,7 +17,7 @@ body {
 #sidebar-first,
 #sidebar-second,
 .navigation,
-#toolbar,
+#admin_menu,
 #footer-wrapper,
 .tabs,
 .add-or-remove-shortcuts {
