Issue #1174640 by Niklas Fiekas, aspilicious, ericduran, cosmicdreams, amateescu, tim.plunkett: Added new HTML5 FAPI element: number.

--- a/themes/bartik/css/style.css
+++ b/themes/bartik/css/style.css
@@ -1329,6 +1329,7 @@ input.form-tel,
 input.form-email,
 input.form-url,
 input.form-color,
+input.form-number,
 textarea.form-textarea,
 select.form-select {
   border: 1px solid #ccc;
