--- a/themes/seven/style.css
+++ b/themes/seven/style.css
@@ -639,6 +639,7 @@ div.teaser-checkbox .form-item,
 .form-disabled input.form-email,
 .form-disabled input.form-url,
 .form-disabled input.form-color,
+.form-disabled input.form-number,
 .form-disabled input.form-file,
 .form-disabled textarea.form-textarea,
 .form-disabled select.form-select {
@@ -729,6 +730,7 @@ input.form-tel,
 input.form-email,
 input.form-url,
 input.form-color,
+input.form-number,
 input.form-file,
 textarea.form-textarea,
 select.form-select {
@@ -746,6 +748,7 @@ input.form-tel:focus,
 input.form-email:focus,
 input.form-url:focus,
 input.form-color:focus,
+input.form-number:focus,
 input.form-file:focus,
 textarea.form-textarea:focus,
 select.form-select:focus {
