--- a/themes/stark/layout.css
+++ b/themes/stark/layout.css
@@ -1,4 +1,3 @@
-
 /**
  * @file
  * Stark layout method
@@ -142,4 +141,23 @@ main:after {
     float: left;
   }
 }
+
+/**
+ * Responsive tables.
+ */
+@media screen and (max-width:450px) {
+  th.priority-low,
+  td.priority-low,
+  th.priority-medium,
+  td.priority-medium {
+    display: none;
+  }
+}
+@media screen and (max-width:720px) {
+  th.priority-low,
+  td.priority-low {
+    display: none;
+  }
+}
+
 
