--- a/themes/bartik/css/style.css
+++ b/themes/bartik/css/style.css
@@ -1182,6 +1182,7 @@ input.form-text,
 input.form-tel,
 input.form-email,
 input.form-url,
+input.form-color,
 textarea.form-textarea,
 select.form-select {
   border: 1px solid #ccc;
