--- a/themes/seven/style.css
+++ b/themes/seven/style.css
@@ -610,6 +610,7 @@ div.teaser-checkbox .form-item,
 .form-disabled input.form-tel,
 .form-disabled input.form-email,
 .form-disabled input.form-url,
+.form-disabled input.form-color,
 .form-disabled input.form-file,
 .form-disabled textarea.form-textarea,
 .form-disabled select.form-select {
@@ -699,6 +700,7 @@ input.form-text,
 input.form-tel,
 input.form-email,
 input.form-url,
+input.form-color,
 input.form-file,
 textarea.form-textarea,
 select.form-select {
@@ -715,6 +717,7 @@ input.form-text:focus,
 input.form-tel:focus,
 input.form-email:focus,
 input.form-url:focus,
+input.form-color:focus,
 input.form-file:focus,
 textarea.form-textarea:focus,
 select.form-select:focus {
