--- a/themes/bartik/css/style.css
+++ b/themes/bartik/css/style.css
@@ -1671,16 +1671,16 @@ div.admin-panel .description {
  * Responsive tables.
  */
 @media screen and (max-width:450px) {
-  th.helpful,
-  td.helpful,
+  th.priority-low,
+  td.priority-low,
   th.priority-medium,
   td.priority-medium {
     display: none;
   }
 }
 @media screen and (max-width:720px) {
-  th.helpful,
-  td.helpful {
+  th.priority-low,
+  td.priority-low {
     display: none;
   }
 }
